<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="item"
            type="com.ashish.e_comdummy.model.ProductItem" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include android:id="@+id/topBar"
            layout="@layout/common_bar_layout"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/topBar"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15sp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10sp"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/button_white_border_gray"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgProduct"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/ic_outline_image_24"
                        app:imageUrl="@{item.image}"
                        app:placeholder="@{@drawable/ic_outline_image_24}"
                        android:layout_gravity="center_horizontal"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSelectImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/select_image" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:padding="5sp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20sp"
                    android:text="@string/name"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name"
                    app:htmlText='@{item.name??""}'
                    android:background="@drawable/button_white_border_gray"
                    android:padding="10sp"
                    android:textColor="@color/black"
                    android:inputType="textPersonName" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:padding="5sp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="15sp"
                    android:text="@string/price"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_price"
                    android:background="@drawable/button_white_border_gray"
                    android:padding="10sp"
                    app:htmlText='@{item.price??""}'
                    android:textColor="@color/black"
                    android:inputType="numberDecimal" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:padding="5sp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="15sp"
                    android:text="@string/description"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_detail"
                    android:background="@drawable/button_white_border_gray"
                    android:padding="10sp"
                    app:htmlText='@{item.detail??""}'
                    android:textColor="@color/black"
                    android:inputType="textMultiLine" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_500"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="20sp"
                    android:text="@string/submit" />

            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/loadingPB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>
</layout>